# sipm-autocalib

./: .gitignore  README.md  pyproject.toml
config/: autocalib-p13-anp-r003.yaml  autocalib-p13-aph-r003.yaml  autocalib-p13-ath-r001.yaml  autocalib-p13-ath-r002.yaml  autocalib-p15-r004-conf.yaml  autocalib-p16-r002-conf.yaml  autocalib-p16-r008-conf.yaml  autocalib-p18-r000-conf.yaml  autocalib-p19-r002-conf.yaml  autocalib-p19-r006-conf.yaml  autocalib-p19-r007-conf.yaml  autocalib-p19-r008-conf.yaml
ipynb/: autocalib.ipynb  autocalib_and_ths.ipynb  multiplot_on_dsp.ipynb  threshold.ipynb  threshold_nersc.ipynb
src/sipm_autocalib/: __init__.py  advanced_calibration.py  core.py  crosschecks.py  data_manager.py  energy.py  fullchain.py  histograms.py  plotting.py  simple_calibration.py  threshold.py  utils.py
